Fix Angular template error: escape email @

--- a/iset_kr/src/app/pages/home/home.component.html
+++ b/iset_kr/src/app/pages/home/home.component.html
@@ -461,7 +461,7 @@
               </div>
               <h4 class="fw-bold text-navy mb-3">Email</h4>
               <p class="text-secondary mb-0">
-                <a href="mailto:contact@isetkr.rnu.tn">contact@isetkr.rnu.tn</a>
+                <a href="mailto:contact&#64;isetkr.rnu.tn">contact&#64;isetkr.rnu.tn</a>
               </p>
             </div>
 
