--- a/iset_kr/src/app/app.component.html
+++ b/iset_kr/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Modern Header -->
 <header class="main-header transparent-header"
-  *ngIf="!isAdminRoute && !isLoginPage && !isContactPage && !isFormationsPage">
+  *ngIf="!isAdminRoute && !isLoginPage && !isContactPage && !isFormationsPage && !isCertificationsPage">
   <div class="header-container">
     <!-- Logo & Title -->
     <div class="logo-section" routerLink="/">
@@ -122,7 +122,8 @@
 <router-outlet></router-outlet>
 
 <!-- Footer -->
-<footer class="main-footer" *ngIf="!isAdminRoute && !isLoginPage && !isContactPage && !isFormationsPage">
+<footer class="main-footer"
+  *ngIf="!isAdminRoute && !isLoginPage && !isContactPage && !isFormationsPage && !isCertificationsPage">
   <div class="footer-content">
     <div class="footer-column">
       <h4>ISET Kairouan</h4>
