fix: update Head of Department for Economie et Gestion to Chokri Ouertani

--- a/iset_kr/src/app/pages/login/login.component.html
+++ b/iset_kr/src/app/pages/login/login.component.html
@@ -132,9 +132,9 @@
             <input type="checkbox" formControlName="rememberMe">
             <span>Se souvenir de moi</span>
           </label>
-          <button type="button" class="forgot-password" (click)="forgotPassword()">
+          <a routerLink="/forgot-password" class="forgot-password">
             Mot de passe oublié ?
-          </button>
+          </a>
         </div>
 
         <button type="submit" class="submit-btn" [disabled]="isLoading">
