feat: add gallery api and seed script

--- a/iset_kr/src/app/pages/formations/formations.component.html
+++ b/iset_kr/src/app/pages/formations/formations.component.html
@@ -35,7 +35,14 @@
             <h2 class="display-5 fw-black text-navy mb-4 mt-2">Apprendre par <span class="text-gold">l'Action</span>
             </h2>
             <p class="lead text-secondary mb-4 italic ps-4 border-start-gold-thick">
-              "L'ISET de Kairouan s'engage à offrir une formation qui allie rigueur théorique et expertise pratique."
+              "Fondé en 2000, l'Institut Supérieur des Études Technologiques de Kairouan (ISET Kairouan) est un
+              établissement public créé par la loi n° 981-2000 du 11 mai 2000. Il relève de la Direction Générale des
+              Etudes Technologiques du Ministère de Enseignements Supérieur.
+
+              L'ISET de Kairouan dispense des formations professionnalisantes dans le cadre du système LMD, en vue de
+              l'obtention de diplômes de licence appliquée et de mastère professionnel.
+
+              "
             </p>
             <p class="text-secondary mb-5 fs-5">
               Nos programmes sont conçus en étroite collaboration avec le monde industriel pour garantir une
@@ -88,8 +95,13 @@
             <div class="card-icon-main"><i class="fas fa-certificate"></i></div>
             <h3 class="fw-black text-white mb-4 fs-3">Licences</h3>
             <p class="text-white-50 fs-5 mb-5">
-              Programmes de 3 ans alliant fondamentaux théoriques et immersion professionnelle via des stages
-              obligatoires.
+              Le parcours de licence est fondamental car il constitue le socle académique et disciplinaire essentiel
+              pour l'acquisition des connaissances de base, le développement d'une pensée critique et l'orientation vers
+              une spécialisation professionnelle ou une poursuite d'études. En 3 ans, il permet de construire un
+              équilibre entre théorie et pratique, et prépare les étudiants à s'insérer avec compétence dans un monde du
+              travail en constante évolution ou à réussir leur entrée en master.
+              L'ISET de Kairouan propose les formations de licences suivantes:
+
             </p>
             <ul class="card-check-list white">
               <li><i class="fas fa-check"></i> Technologie de l'Informatique</li>
@@ -116,9 +128,6 @@
             </p>
             <ul class="card-check-list">
               <li><i class="fas fa-check"></i> Management de la Qualité</li>
-              <li><i class="fas fa-check"></i> Sécurité Informatique</li>
-              <li><i class="fas fa-check"></i> Systèmes Embarqués</li>
-              <li><i class="fas fa-check"></i> Ingénierie de Maintenance</li>
             </ul>
             <div class="mt-5">
               <img src="assets/images/images_iset/Image10.jpg" alt="Mastères"
