feat: update contact page layout

--- a/iset_kr/src/app/pages/contact/contact.component.html
+++ b/iset_kr/src/app/pages/contact/contact.component.html
@@ -30,14 +30,14 @@
                                     <div class="form-group-pro">
                                         <label for="name">Votre Nom Complet</label>
                                         <input type="text" id="name" [(ngModel)]="contact.name" name="name" required
-                                            placeholder="Ahmed Ben Ali" class="form-input-pro">
+                                            placeholder="Nom et Prénom" class="form-input-pro">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group-pro">
                                         <label for="email">Adresse E-mail</label>
                                         <input type="email" id="email" [(ngModel)]="contact.email" name="email" required
-                                            email placeholder="contact@exemple.com" class="form-input-pro">
+                                            email placeholder="Votre E-mail" class="form-input-pro">
                                     </div>
                                 </div>
                                 <div class="col-12">
