feat: content updates for institut pages

--- a/iset_kr/src/app/pages/institut/mot-du-directeur/mot-du-directeur.component.html
+++ b/iset_kr/src/app/pages/institut/mot-du-directeur/mot-du-directeur.component.html
@@ -48,7 +48,7 @@
                                 </h3>
                                 <p>Nos programmes couvrent des domaines clés : les technologies de l’information, le
                                     génie mécanique et électrique, ainsi que les sciences économiques et de gestion.
-                                    Nous adoptant une pédagogie active alliant théorie et pratique, nos étudiants
+                                    Nous adoptons une pédagogie active alliant théorie et pratique, nos étudiants
                                     bénéficient de stages en entreprise et de projets concrets, favorisant une immersion
                                     professionnelle précoce et efficace.</p>
                             </div>
