--- a/iset_kr/src/app/pages/institut/presentation/presentation.component.html
+++ b/iset_kr/src/app/pages/institut/presentation/presentation.component.html
@@ -38,7 +38,7 @@
                         <h2 class="display-5 fw-black text-navy mb-4 mt-2">Un Héritage au Service de <span
                                 class="text-gold">l'Innovation</span></h2>
                         <p class="lead text-secondary mb-4 italic ps-4 border-start-gold-thick">
-                            "Nous sommes très heureux de vous souhaiter la bienvenue sur notre site institutionnel."
+                            "Nous sommes très heureux de vous souhaitez la bienvenue sur notre site institutionnel."
                         </p>
                         <p class="text-secondary mb-5 fs-5">
                             L’ISET de Kairouan, avec ses vingt-cinq années d’existence, a atteint une maturité qui
@@ -94,7 +94,7 @@
                         <div class="card-glow"></div>
                         <div class="card-icon-main"><i class="fas fa-user-tie"></i></div>
                         <h3 class="fw-black text-navy mb-4">Encadrement d'Élite</h3>
-                        <p class="text-secondary">Plus que 100 enseignants technologues experts en Sciences Économiques
+                        <p class="text-secondary">Plus que 100 enseignants experts en Sciences Économiques
                             et Gestion, épaulés par des intervenants du monde professionnel.</p>
                         <ul class="card-check-list">
                             <li><i class="fas fa-check"></i> Corps Technologue Qualifié</li>
