--- a/iset_kr/src/app/pages/institut/presentation/presentation.component.html
+++ b/iset_kr/src/app/pages/institut/presentation/presentation.component.html
@@ -111,7 +111,7 @@
                         <div class="card-icon-main"><i class="fas fa-microchip"></i></div>
                         <h3 class="fw-black text-white mb-4">Logistique de Pointe</h3>
                         <p class="text-white-50">Nos moyens humains et logistiques permettent d’acquérir le
-                            savoir-faire, l’autonomie et l’initiative indispensable au devenir professionnel.</p>
+                            savoir-faire, l’autonomie et l’initiative indispensable pour devenir professionnel.</p>
                         <ul class="card-check-list white">
                             <li><i class="fas fa-check"></i> Laboratoires Équipés</li>
                             <li><i class="fas fa-check"></i> Pédagogie Active</li>
@@ -175,14 +175,14 @@
                                         <div class="stat-pro-item">
                                             <div class="h2 fw-900 text-gold-pro mb-0">100+</div>
                                             <div class="small text-white opacity-70 uppercase tracking-widest">
-                                                Technologues</div>
+                                                Enseignants</div>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="stat-pro-item">
-                                            <div class="h2 fw-900 text-gold-pro mb-0">ISO</div>
-                                            <div class="small text-white opacity-70 uppercase tracking-widest">Normes
-                                                Internationales</div>
+                                            <div class="h2 fw-900 text-gold-pro mb-0">2025</div>
+                                            <div class="small text-white opacity-70 uppercase tracking-widest">Certifié
+                                                ISO 21001</div>
                                         </div>
                                     </div>
                                 </div>
