feat: update head of department message

--- a/iset_kr/src/app/pages/department-detail/department-detail.component.html
+++ b/iset_kr/src/app/pages/department-detail/department-detail.component.html
@@ -88,7 +88,7 @@
                 <div class="col-lg-5 animate-slide-left">
                     <div class="labs-showcase">
                         <div class="section-label-pro mb-4">INFRASTRUCTURE</div>
-                        <h2 class="h1 fw-black text-navy mb-5">Laboratoires & Clubs</h2>
+                        <h2 class="h1 fw-black text-navy mb-5">Laboratoires</h2>
 
                         <div class="iso-award-card mb-3" *ngFor="let lab of department.labs">
                             <div class="award-icon-box small">
