fix: update contact email to isetkairouan@kairouan.r-iset.tn

--- a/iset_kr/src/app/app.component.html
+++ b/iset_kr/src/app/app.component.html
@@ -114,7 +114,7 @@
         </div>
         <div class="info-item">
           <i class="fas fa-envelope"></i>
-          <span>contact&#64;isetkr.rnu.tn</span>
+          <span>isetkairouan@kairouan.r-iset.tn</span>
         </div>
       </div>
     </div>
