UI Fix: Hide navbar on department pages and add back-to-home button

--- a/iset_kr/src/app/pages/department-detail/department-detail.component.html
+++ b/iset_kr/src/app/pages/department-detail/department-detail.component.html
@@ -161,6 +161,12 @@
             </div>
         </div>
     </section>
+    </section>
+
+    <!-- Return to Home Button -->
+    <a routerLink="/" class="dept-back-home" title="Retour à l'accueil">
+        <i class="fas fa-home"></i>
+    </a>
 </main>
 
 <ng-template #notFound>
